<resources>
    <string name="app_name">Face Manager</string>
    <string name="more">More</string>
    <string name="title_camera_permission">Need Camera Permission</string>
    <string name="msg_camera_permission">Application needs camera permission for recognize your face.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="face_rec">Face Manager</string>
    <string name="face_training">Face Training</string>
    <string name="config_device">Configure device</string>
    <string name="left">Left: 0%</string>
    <string name="center">Center: 0%</string>
    <string name="right">Right: 0%</string>
    <string name="start_face_recognition">Start</string>
    <string name="tips">Tips:</string>
    <string name="please_move_your_face_direction_from_center_to_left_and_right"> Moving your face according to below mention percentage. </string>
    <string name="face_recognition_name">Face Recognition name</string>
    <string name="please_enter_unique_user_name_for_the_face_recognition">Please enter unique user name for the face recognition.</string>
    <string name="enter_your_username_here">Enter your username here</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="device_name">Device Name</string>
    <string name="create_user_title">Create New User</string>
    <string name="address">Address</string>
    <string name="connect">Connect</string>

    <string name="title_location_permission">Need Location Permission</string>
    <string name="title_location_enabled">Location</string>
    <string name="msg_location_enabled">Application needs enable location to connect near by BLE devices.</string>
    <string name="msg_location_permission">Application needs location permission to connect near by BLE devices.</string>
    <string name="send_trained_information">Send Trained Information</string>
    <string name="data_saved_successfully">Data saved Successfully !!!</string>
    <string name="okay">okay</string>
    <string name="mac_address">MAC ADDRESS:</string>
    <string name="status">Status:</string>
    <string name="theme_blue_black">Blue Black Theme</string>
    <string name="theme_gray_white">Gray white Theme</string>
    <string name="name_of_mac_add">Name of mac add</string>
    <string name="mac_addresses">mac addresses</string>
    <string name="mac">MAC:</string>
    <string name="forground_service_notification">Bluetooth scanning service running in background, which leads to battery drain. If you are not using app, we suggest you to stop Foreground service by pressing disable button</string>
    <string name="please_enter_device_name">Please enter device name</string>
    <string name="please_enter_passcode">Pass Code</string>
    <string name="smartlock_information">SmartLock Information</string>
    <string name="msg_error">Some thing wrong. Please try again</string>
    <string name="msg_device_connect_successfully">Device Connected Successfully</string>
    <string name="disconnect">Disconnect</string>
    <string name="device_name_">Device Name:</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="face_recognition">Face\nRecognition</string>
    <string name="required_logo_here">Required  \nLogo Here</string>
    <string name="version_1_1">Version 1.1</string>
    <string name="pairing_request">Pairing request…</string>
    <string name="connecting">Connecting…</string>
    <string name="start_training">Start Training</string>
    <string name="send_face_data">Send Face Data</string>
    <string name="add_face">AddFace</string>
    <string name="request_snapshot_data">Request Snapshot</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="name">User Name</string>
    <string name="receiving_alert_title">"Receiving Snapshot Data …"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="manage_smart_locks">Manage Smart Locks</string>
    <string name="manage_users">Manage Users</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_profile">My Profile</string>
    <string name="register">Register</string>
    <string name="login">Sign In</string>
    <string name="create_user">Submit</string>
    <string name="sign_in_already_account">Already have an account? <b>Sign In</b></string>
    <string name="sign_in_no_account">"Don't have an account?" <b>Register</b></string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_enter_email">Please enter Email Address</string>
    <string name="we_just_need_your_register_email_id_to_sent_you_password_reset_instruction">We just need your register Email id to sent you password reset instruction.</string>
    <string name="reset_password">Reset</string>
    <string name="smart_locks">Smart Locks</string>
    <string name="smart_users">Smart Users</string>
    <string name="server_error">Error connecting server</string>
    <string name="email_validation">Please enter valid email</string>
    <string name="name_validation">Please enter name of the user</string>
    <string name="email_empty_validation">Please enter email</string>
    <string name="password_validation">Please enter password</string>
    <string name="confirm_password_validation">Please enter confirm password</string>
    <string name="password_confirm_validation">Confirm Password does not match with password</string>
    <string name="ok_message">OK</string>
    <string name="alert_title">Alert</string>
    <string name="smart_scanning">Smart Screen Scanning</string>
    <string name="msg_dialog_passcode">Your lock is already paired with </string>
    <string name="email_text">Email</string>
    <string name="password">Password</string>
    <string name="user_created_successfully">User created successfully!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="password_validation_regex">Your password must contain at least one capital, one number, and one special character.</string>
    <string name="password_length_validation">Minimum length of password is 6 characters.</string>
    <string name="btn_update">Update</string>
    <string name="user_edited">User Edited Successfully</string>
    <string name="please_wait">Please wait…</string>
    <string name="enter_old">Please enter old password</string>
    <string name="enter_new">Please enter new password</string>
    <string name="enter_new_confirm">Please enter confirm password</string>
    <string name="phone_optional">Phone (optional)</string>
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="access_level">Access Level</string>
    <string name="edit_user">Edit User</string>
    <string name="user_detail">User Detail</string>
    <string name="msg_start_traning">You don\'t have face training data.  Do you want to start training?</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="msg_tooltip">Tap here to start Face Training</string>
    <string name="send_training_data_label">Send Training Data</string>
    <string name="connect_to_device">You are currently not connected with any device. Do you wish to connect?</string>
    <string name="connection_label">Connection</string>
    <string name="skip_label">Skip</string>
    <string name="check_internet">Please check your internet connection!</string>
    <string name="setting_label">Settings</string>
    <string name="old_password_label">Old Password</string>
    <string name="new_password_label">New Password</string>
    <string name="update_label">Update</string>
    <string name="cancel_label">Cancel</string>
    <string name="confirm_password_label">Confirm Password</string>

    <string name="picture">Picture</string>
    <string name="face_manager">Face Manager</string>
    <string name="AddFace">AddFace</string>
    <string name="face_registration">Face Registration</string>
    <string name="face_register">Register</string>
    <string name="face_register_done">Done</string>
    <string name="remote_control">Remote Control</string>
    <string name="app_start">Start</string>
    <string name="connection_ble">Bluetooth</string>
    <string name="connection_network">Network</string>
    <string name="please_enter_ip">Please Enter IP</string>

    <string name="use_heavy_model">Use Heavy Model</string>
    <string name="eLock">eLock</string>
    <string name="door_access">Door access</string>

    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string-array name="userRoles">
        <item>Guest</item>
        <item>Admin</item>
    </string-array>
    <string name="title_activity_register_face_demo1">RegisterFaceDemo</string>
    <string name="glassCheckbox">Register with both glass on and off</string>
</resources>
