<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="login"
            type="com.nxp.facemanager.viewModels.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/toolbar_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activity.RegistrationActivity">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="60dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="110dp"
                    android:gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_nxp_splash"
                    android:textColor="@color/white"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/text_layout_edit_text"
                android:layout_below="@id/cardLogo"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextLabel">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/reg_edit_text"
                    android:drawableStart="@drawable/ic_mail"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{login::onTextChanged}"
                    android:text="@={login.strEmail}"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/text_layout_edit_text"
                android:layout_below="@id/email"
                app:hintTextAppearance="@style/TextLabel"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/reg_edit_text"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:onTextChanged="@{login::onPasswordChanged}"
                    android:text="@={login.strPassword}"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@color/icon_color"
                android:elevation="5dp"
                android:onClick="@{(view) -> login.performSignIn()}"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal"
                android:translationZ="2dp" />


            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/btnSignIn"
                android:layout_margin="16dp"
                android:gravity="center"
                android:onClick="@{(view)->login.forgotPassword()}"
                android:text="@string/forgot_your_password"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAccountRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtForgotPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:onClick="@{(view) -> login.openRegistration()}"
                android:text="@string/sign_in_no_account"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>
    </ScrollView>
</layout>