<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/send_face_data"
            android:textColor="@color/dialog_title_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/dialog_message_color"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/icon_color"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btnResetPassword"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/icon_color"
                android:textSize="20sp"
                android:textStyle="normal"

                />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>